--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
     padding: 4px 16px;
     border-radius: 4px;
     box-shadow: 1px 1px 5px rgb(255, 205, 255);
+    cursor: pointer;
 }
 
 .questions {
