--- a/style.css
+++ b/style.css
@@ -33,9 +33,9 @@ body {
     /* collapse answer: */
     max-height: 0;
     overflow: hidden;
-    transition: max-height 0.3s ease-in-out;
+    /* transition: max-height 0.3s ease-in-out; */
 }
 
 .answers.active {
-    max-height: fit-content                                         ;
+    max-height: fit-content;                                        ;
 }
