--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgba(255, 215, 255);
+    background-color: #212121;
     font-family: Arial, Helvetica, sans-serif;
     padding: 40px;
     line-height: 1.6rem;
@@ -14,6 +14,10 @@ body {
     cursor: pointer;
 }
 
+h2 {
+    color: white;
+
+}
 .questions {
     display: flex;
     align-items: center;
