--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ h2 {
     /* collapse answer: */
     max-height: 0;
     overflow: hidden;
-    /* transition: max-height 0.3s ease-in-out; */
+    transition: max-height 0.3s ease-in-out;
 }
 
 /* .answers.active {
